Add filter functionality for dates

--- a/styles.css
+++ b/styles.css
@@ -1037,7 +1037,7 @@ footer {
     gap: 0.2rem;
 }
 
-input[type="checkbox"] {
+input[type="checkbox"], input[type="radio"] {
     accent-color: black;
     border-radius: 5px;
 }
