--- a/styles.css
+++ b/styles.css
@@ -924,6 +924,20 @@ footer {
     font-size: 0.8rem;
 }
 
+.lineup-info-dates, .modal-info-dates {
+    margin-top: 0.2rem;
+    color: grey;
+}
+
+.lineup-info-dates {
+    font-size: 0.8rem;
+    margin-bottom: 0.8rem;
+}
+
+.modal-info-dates {
+    font-size: 0.9rem;
+}
+
 .modal-info-text:not(:first-of-type) {
     margin-top: 1rem;
     color: grey;
