--- a/styles.css
+++ b/styles.css
@@ -707,16 +707,14 @@ footer {
 
 .about-main {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   width: calc(100% - calc(3rem + 2vw));
   gap: 2rem;
 }
 
-.about-item-img {
+.about-img {
   width: 100%;
-  height: 100%;
-  min-height: 100%;
-  max-height: 400px;
+  height: auto;
   border-radius: 10px;
 }
 
